refactor: minor changes

--- a/calculator.html
+++ b/calculator.html
@@ -50,19 +50,19 @@
             <div class="center-form">
                 <input type="number" id="num1" class="form-control" placeholder="first number" step="0.1">
             </div>
-            <br>
+            <br />
             <div class="center-form">
                 <input type="number" id="num2" class="form-control" placeholder="second number" step="0.1">
             </div>
-            <br>
+            <br />
             <div class="center-form">
                 <div class="input-group">
-                    <input type="text" id="result" class="form-control" placeholder="result" value="" disabled readonly>
+                    <input type="text" id="result" class="form-control input-group-item" placeholder="result" value="" disabled readonly>
                     <button class="btn btn-outline-light" type="button" id="copy-to-clipboard" disabled>Copy
                         Result</button>
                 </div>
             </div>
-            <br>
+            <br />
             <div class="center-form mb-4">
                 <div class="d-lg-inline-flex d-block">
                     <button class="btn btn-success m-1" id="add">Add &#43;</button>
