--- a/loan.html
+++ b/loan.html
@@ -60,8 +60,8 @@
                         <option value="&#8369;">&#8369; - Peso</option>
                         <option value="&#8356;">&#8356; - Lira</option>
                     </select>
-                    <input type="number" id="amount" placeholder="&#164;amount" class="form-control" style="width: 65%"
-                        step="0.1" min="0" />
+                    <input type="number" id="amount" placeholder="&#164;amount" class="form-control input-group-item"
+                        style="width: 65%" step="0.1" min="0" />
                 </div>
             </div>
             <br />
@@ -80,11 +80,11 @@
                 <input type="submit" id="loancalc" class="btn btn-success btn-lg" value="Calculate Loan">
             </div>
         </form>
-        <br>
+        <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="loanout"></p>
         </div>
-        <br>
+        <br />
         <div class="my-4">
             <a href="https://duckduckgo.com/?q=calculate+loan" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
