--- a/eliminations.html
+++ b/eliminations.html
@@ -6,17 +6,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Factorial Calculator</title>
-    <meta name="title" content="MathFlare - Factorial Calculator">
-    <meta name="og:title" content="MathFlare - Factorial Calculator" />
-    <meta name="twitter:title" content="MathFlare - Factorial Calculator" />
+    <title>MathFlare - Chemistry Eliminations Calculator</title>
+    <meta name="title" content="MathFlare - Chemistry Eliminations Calculator">
+    <meta name="og:title" content="MathFlare - Chemistry Eliminations Calculator" />
+    <meta name="twitter:title" content="MathFlare - Chemistry Eliminations Calculator" />
     <meta name="keywords" content="factorial, calculate factorial, algebra, math, mathflare, math flare">
     <meta name="description" content="Calculate factorials fast." />
     <meta name="og:description" content="Calculate factorials fast." />
     <meta name="twitter:description" content="Calculate factorials fast." />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/fact" />
-    <link rel="canonical" href="https://www.mathflare.xyz/fact">
+    <meta name="og:url" content="https://www.mathflare.xyz/eliminations" />
+    <link rel="canonical" href="https://www.mathflare.xyz/eliminations">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -43,14 +43,39 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Factorials</h1>
+        <h1 class="text-white">Eliminations Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white">Enter the number</h4>
+            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span><sub
+                    class="text-warning">z</sub> + <span class="text-warning">W</span><sub
+                    class="text-warning">k</sub>OH<sub class="text-warning">m</sub></h4>
             <div class="center-form">
-                <input type="number" id="number" placeholder="number" class="form-control mb-0" step="0.1" min="0" />
+                <div class="input-group">
+                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                </div>
             </div>
             <br />
+            <div class="center-form">
+                <div class="input-group">
+                    <input type="text" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                    <input type="number" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                </div>
+            </div>
+            <br />
+            <div class="center-form">
+                <div class="input-group">
+                    <input type="number" id="k" placeholder="k" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                    <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                </div>
+            </div>
+            <br>
             <div class="center-form">
                 <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
             </div>
@@ -69,7 +94,6 @@
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/fact.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
