fix: minor changes

--- a/eliminations.html
+++ b/eliminations.html
@@ -53,23 +53,23 @@
                 <div class="input-group">
                     <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
                         min="0" />
+                    <input type="text" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                </div>
+            </div>
+            <br />
+            <div class="center-form">
+                <div class="input-group">
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                </div>
-            </div>
-            <br />
-            <div class="center-form">
-                <div class="input-group">
-                    <input type="text" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                    <input type="number" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                </div>
-            </div>
-            <br />
-            <div class="center-form">
-                <div class="input-group">
                     <input type="number" id="k" placeholder="k" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                </div>
+            </div>
+            <br />
+            <div class="center-form">
+                <div class="input-group">
+                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
                         min="0" />
@@ -82,7 +82,7 @@
         </form>
         <br />
         <div style="max-height: 1em;">
-            <p class="text-success" id="output"></p>
+            <p class="text-success" id="eliminationout"></p>
         </div>
         <br />
         <div class="my-4">
