test: support for elimination calc

--- a/eliminations.html
+++ b/eliminations.html
@@ -10,10 +10,10 @@
     <meta name="title" content="MathFlare - Chemistry Eliminations Calculator">
     <meta name="og:title" content="MathFlare - Chemistry Eliminations Calculator" />
     <meta name="twitter:title" content="MathFlare - Chemistry Eliminations Calculator" />
-    <meta name="keywords" content="factorial, calculate factorial, algebra, math, mathflare, math flare">
-    <meta name="description" content="Calculate factorials fast." />
-    <meta name="og:description" content="Calculate factorials fast." />
-    <meta name="twitter:description" content="Calculate factorials fast." />
+    <meta name="keywords" content="elimination, chemistry elimination, chemistry, math, mathflare, math flare">
+    <meta name="description" content="Calculate chemistry eliminations" />
+    <meta name="og:description" content="Calculate chemistry eliminations" />
+    <meta name="twitter:description" content="Calculate chemistry eliminations" />
     <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/eliminations" />
     <link rel="canonical" href="https://www.mathflare.xyz/eliminations">
@@ -77,7 +77,7 @@
             </div>
             <br>
             <div class="center-form">
-                <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+                <input type="submit" id="eliminationcalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
         </form>
         <br />
@@ -86,7 +86,7 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=calculate+the+factorial+of+a+number" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=elimination+in+chemistry" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
             <a href="cheatsheet.html#factorials" class="btn btn-outline-light">Popular Factorials</a>
         </div>
@@ -94,6 +94,7 @@
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
+    <script src="dist/elimination.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
