fix: use proper terminology

--- a/eliminations.html
+++ b/eliminations.html
@@ -6,17 +6,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Chemistry Eliminations Calculator</title>
-    <meta name="title" content="MathFlare - Chemistry Eliminations Calculator">
-    <meta name="og:title" content="MathFlare - Chemistry Eliminations Calculator" />
-    <meta name="twitter:title" content="MathFlare - Chemistry Eliminations Calculator" />
-    <meta name="keywords" content="elimination, chemistry elimination, chemistry, math, mathflare, math flare">
-    <meta name="description" content="Calculate chemistry eliminations" />
-    <meta name="og:description" content="Calculate chemistry eliminations" />
-    <meta name="twitter:description" content="Calculate chemistry eliminations" />
+    <title>MathFlare - Neutralizations Reaction Calculator</title>
+    <meta name="title" content="MathFlare - Neutralizations Reaction Calculator">
+    <meta name="og:title" content="MathFlare - Neutralizations Reaction Calculator" />
+    <meta name="twitter:title" content="MathFlare - Neutralizations Reaction Calculator" />
+    <meta name="keywords"
+        content="neutralization reactions, chemistry neutralizations, chemistry, math, mathflare, math flare">
+    <meta name="description" content="Calculate neutralization reactions" />
+    <meta name="og:description" content="Calculate chemistry neutralizations reactions" />
+    <meta name="twitter:description" content="Calculate chemistry neutralizations reactions" />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/eliminations" />
-    <link rel="canonical" href="https://www.mathflare.xyz/eliminations">
+    <meta name="og:url" content="https://www.mathflare.xyz/neutralizations" />
+    <link rel="canonical" href="https://www.mathflare.xyz/neutralizations">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -43,7 +44,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Eliminations Calculator</h1>
+        <h1 class="text-white">Neutralization Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span><sub
@@ -86,9 +87,8 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=elimination+in+chemistry" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=neutralizations+calcualtor" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
-            <a href="cheatsheet.html#factorials" class="btn btn-outline-light">Popular Factorials</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
