prod: added in navbar neutralization's calculator

--- a/eliminations.html
+++ b/eliminations.html
@@ -52,27 +52,27 @@
                     class="text-warning">k</sub>OH<sub class="text-warning">m</sub></h4>
             <div class="center-form">
                 <div class="input-group">
-                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="x" placeholder="Enter number x" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="text" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                </div>
-            </div>
-            <br />
-            <div class="center-form">
-                <div class="input-group">
-                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                    <input type="number" id="k" placeholder="k" class="form-control input-group-item" step="0.1"
+                    <input type="text" id="w" placeholder="Enter element W" class="form-control input-group-item" step="0.1"
                         min="0" />
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
+                    <input type="text" id="y" placeholder="Enter element Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="k" placeholder="Enter number k" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                </div>
+            </div>
+            <br />
+            <div class="center-form">
+                <div class="input-group">
+                    <input type="number" id="z" placeholder="Enter number z" class="form-control input-group-item" step="0.1"
+                        min="0" />
+                    <input type="number" id="m" placeholder="Enter number m" class="form-control input-group-item" step="0.1"
                         min="0" />
                 </div>
             </div>
@@ -87,7 +87,7 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=neutralizations+calcualtor" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=neutralizations" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
     </div>
