prod: renamed neutral. calc and minor changes

--- a/neutralization.html
+++ b/neutralization.html
@@ -16,8 +16,8 @@
     <meta name="og:description" content="Calculate chemistry neutralizations reactions" />
     <meta name="twitter:description" content="Calculate chemistry neutralizations reactions" />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/neutralizations" />
-    <link rel="canonical" href="https://www.mathflare.xyz/neutralizations">
+    <meta name="og:url" content="https://www.mathflare.xyz/neutralization" />
+    <link rel="canonical" href="https://www.mathflare.xyz/neutralization">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -52,28 +52,34 @@
                     class="text-warning">k</sub>OH<sub class="text-warning">m</sub></h4>
             <div class="center-form">
                 <div class="input-group">
-                    <input type="number" id="x" placeholder="Enter number x" class="form-control input-group-item" step="0.1"
+                    <span class="input-group-text">index</span>
+                    <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="text" id="w" placeholder="Enter element W" class="form-control input-group-item" step="0.1"
+                    <input type="text" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
                         min="0" />
+                    <span class="input-group-text">element</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <input type="text" id="y" placeholder="Enter element Y" class="form-control input-group-item" step="0.1"
+                    <span class="input-group-text">element</span>
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="number" id="k" placeholder="Enter number k" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="k" placeholder="k" class="form-control input-group-item" step="0.1"
                         min="0" />
+                    <span class="input-group-text">index</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <input type="number" id="z" placeholder="Enter number z" class="form-control input-group-item" step="0.1"
+                    <span class="input-group-text">index</span>
+                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="number" id="m" placeholder="Enter number m" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
                         min="0" />
+                    <span class="input-group-text">index</span>
                 </div>
             </div>
             <br>
@@ -87,7 +93,7 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=neutralizations" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=neutralization+reaction+calculator" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
     </div>
