--- a/loan.html
+++ b/loan.html
@@ -97,10 +97,17 @@
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <br>
-        <div class="banner-calc-ad center mt-0 mb-5">
-            <script async="async" data-cfasync="false"
-                src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
-            <div id="container-7225c0737913a927833588485b779dc1"></div>
+        <div class="mb-5">
+            <script type="text/javascript">
+                atOptions = {
+                    'key': 'a0bbb1501adf1271a4ac2f0aef07d0eb',
+                    'format': 'iframe',
+                    'height': 600,
+                    'width': 160,
+                    'params': {}
+                };
+                document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplayformat.com/a0bbb1501adf1271a4ac2f0aef07d0eb/invoke.js"></scr' + 'ipt>');
+            </script>
         </div>
     </div>
     <!-- SCRIPTS START -->
