test: just ignore

--- a/loan.html
+++ b/loan.html
@@ -97,17 +97,10 @@
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <br>
-        <div class="mb-5">
-            <script type="text/javascript">
-                atOptions = {
-                    'key': '8d870d7dbb8775c6b3cdffafbc8b16a3',
-                    'format': 'iframe',
-                    'height': 90,
-                    'width': 728,
-                    'params': {}
-                };
-                document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplayformat.com/8d870d7dbb8775c6b3cdffafbc8b16a3/invoke.js"></scr' + 'ipt>');
-            </script>
+        <div class="banner-calc-ad center mt-0 mb-5">
+            <script async="async" data-cfasync="false"
+                src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+            <div id="container-7225c0737913a927833588485b779dc1"></div>
         </div>
     </div>
     <!-- SCRIPTS START -->
